# cxlalloc

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  bench.sh  flake.nix  rust-toolchain.toml
.cargo/: config.toml
allocator-bench/: Cargo.toml  ycsb-a.txt
allocator-bench/src/: allocator.rs  barrier.rs  benchmark.rs  config.rs  context.rs  ebr.rs  index.rs  lib.rs  process.rs
allocator-bench/src/benchmark/: memcached.rs  mstress.rs  thread_test.rs  xmalloc.rs  ycsb.rs  ycsb_load.rs  ycsb_run.rs
allocator-bench/src/index/: linear_hash_map.rs  linked_hash_map.rs
bench/: ablation.py  bench.py  bench.sh  mimalloc-bench.sh  normalize.sh  recovery.py  setup.sh  silo.py  silo.sh
cxlalloc/: Cargo.toml
cxlalloc-bench/: Cargo.toml  build.rs
cxlalloc-bench/src/: allocator.rs  benchmark.rs  boost.rs  cxlmalloc.rs  index.rs  lib.rs  main.rs  process.rs  worker.rs
cxlalloc-bench/src/allocator/: boost.rs  cxl_shm.rs  cxlalloc.rs  lightning.rs  mimalloc.rs  ralloc.rs
cxlalloc-bench/src/cpp/: boost.cpp  boost.hpp
cxlalloc-bench/src/process/: boost.rs  cxl_shm.rs  cxlalloc.rs  cxlmalloc.rs  lightning.rs  worker.rs
cxlalloc-bench/workload/: ycsb.toml
cxlalloc-bench/workloads/: ablation-hwcc.toml  ablation-mcas.toml  ablation.toml  huge.toml  main.toml  mini.toml  process.toml
cxlalloc-dynamic/: Cargo.toml
cxlalloc-dynamic/src/: lib.rs  stat.rs
cxlalloc-extend/: Cargo.toml
cxlalloc-extend/src/: main.rs
cxlalloc-global/: Cargo.toml
cxlalloc-global/src/: lib.rs
cxlalloc-recover/: Cargo.toml
cxlalloc-recover/src/: clevel.rs  lib.rs  main.rs  queue.rs  worker.rs
cxlalloc-static/: Cargo.toml
cxlalloc-static/include/: cxlalloc.h
cxlalloc-static/src/: lib.rs
cxlalloc-test/: Cargo.toml
cxlalloc-test/src/: lib.rs  main.rs  trace.rs  worker.rs
cxlalloc/src/: allocator.rs  atomic.rs  barrier.rs  bitset.rs  block.rs  box.rs  cache.rs  cas.rs  cell.rs  coherence.rs  crash.rs  data.rs  error.rs  extend.rs  heap.rs  huge.rs  lib.rs  link.rs  log.rs  mcas.rs  raw.rs  recover.rs  region.rs  root.rs  size.rs  slab.rs  stat.rs  thread.rs  transfer.rs  view.rs
cxlalloc/src/bitset/: atomic.rs  hi.rs
cxlalloc/src/raw/: backend.rs  builder.rs  heap.rs  ivshmem.rs  mmap.rs  region.rs  shm.rs
cxlalloc/src/raw/backend/: plain_ivshmem.rs
cxlalloc/src/region/: data.rs  heap.rs  owned.rs  shared.rs
cxlalloc/src/size/: huge.rs  large.rs  small.rs
cxlalloc/src/slab/: local.rs  owned.rs  remote.rs  shared.rs  stack.rs
cxlalloc/src/view/: allocator.rs  data.rs  heap.rs  huge.rs  owned.rs  shared.rs  slab.rs
cxlalloc/tests/: remote.rs  sequential.rs  smoke.rs  transaction.rs
kvs-bench/: Cargo.toml
kvs-bench/src/: lib.rs  ycsb.rs
plot/: ablation.py  bench.py  common.py  compare.py  dashboard.py  huge.py  macro.py  memory.py  micro.py  mimalloc-bench.py  numa.py  optimization.py  plot.py  process.py  recover.py  stat.py
process-bench/: Cargo.toml
process-bench/src/: benchmark.rs  lib.rs  process.rs  worker.rs
process-bench/src/benchmark/: thread_test.rs
script/: main.sh  run.sh  setup.sh
shm/: Cargo.toml
shm/src/: backend.rs  barrier.rs  lib.rs  raw.rs  reservation.rs
shm/src/backend/: mmap.rs  shm.rs
ycsb/: Cargo.toml
ycsb/src/: generator.rs  lib.rs  main.rs
ycsb/src/generator/: discrete.rs  number.rs
ycsb/workloads/: workloada.toml  workloadb.toml  workloadc.toml  workloadd.toml  workloade.toml  workloadf.toml
