[workspace]
members = [
    "crash",
    "cxlalloc",
    "cxlalloc-bench",
    "cxlalloc-dynamic",
    "cxlalloc-extend",
    "cxlalloc-recover",
    "cxlalloc-static",
]
exclude = ["extern"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
backtrace = "0.3"
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.8"
ctor = "0.2"
duct = "0.13"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fastrand = "2.1"
gcollections = "1.5"
hdrhistogram = "7.5"
homedir = "0.3"
intervallum = "1.4"
libc = "0.2"
linkme = "0.3"
log = { version = "0.4", features = ["release_max_level_off"] }
# log = { version = "0.4" }
mimalloc = "0.1"
proptest = "1.0"
ribbit = { git = "https://github.com/nwtnni/ribbit.git" }

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
