[workspace]
members = [
    "crash",
    "cxlalloc",
    "cxlalloc-bench",
    "cxlalloc-dynamic",
    "cxlalloc-recover",
    "cxlalloc-static",
    "cxlalloc-test",
    "kvs-bench",
    "process-bench",
]
exclude = ["extern"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
backtrace = "0.3"
bindgen = "0.71"
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.8"
ctor = "0.2"
duct = "0.13"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
fastrand = "2.1"
gcollections = "1.5"
hdrhistogram = "7.5"
homedir = "0.3"
intervallum = "1.4"
ipc-channel = "0.19"
libc = "0.2"
linkme = "0.3"
log = { version = "0.4", features = ["release_max_level_off"] }
# log = { version = "0.4" }
mimalloc = "0.1"
pkg-config = "0.3"
proptest = "1.0"
proptest-state-machine = "0.3"
ribbit = { git = "https://github.com/nwtnni/ribbit.git" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

# https://proptest-rs.github.io/proptest/proptest/tips-and-best-practices.html
[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
