[package]
name = "allocator-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
bon.workspace = true
core_affinity.workspace = true
libc.workspace = true
rand.workspace = true
rapidhash.workspace = true
serde.workspace = true
serde_json.workspace = true
shm.path = "../shm"
toml.workspace = true
ycsb.path = "../ycsb"
