[package]
name = "allocator-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array.workspace = true
bon.workspace = true
core_affinity.workspace = true
crossbeam-channel.workspace = true
hdrhistogram.workspace = true
libc.workspace = true
parquet.workspace = true
rand.workspace = true
rapidhash.workspace = true
serde.workspace = true
serde_json.workspace = true
shm.path = "../shm"
spin_sleep.workspace = true
toml.workspace = true
ycsb.path = "../ycsb"
