[package]
name = "allocator-bench"
version = "0.1.0"
edition = "2024"

[features]
default = ["validate"]
validate = []

[dependencies]
anyhow.workspace = true
arrow-array.workspace = true
bon.workspace = true
core_affinity.workspace = true
crossbeam-channel.workspace = true
hdrhistogram.workspace = true
libc.workspace = true
log.workspace = true
parquet.workspace = true
rand.workspace = true
rapidhash.workspace = true
serde.workspace = true
serde_json.workspace = true
shm = { workspace = true, features = ["serde"] }
spin_sleep.workspace = true
toml.workspace = true
ycsb.workspace = true
