[package]
name = "cxlalloc-bench"
version = "0.1.0"
edition = "2021"
default-run = "cxlalloc-bench"

[[bin]]
name = "cxlalloc-bench-worker"
path = "src/process/worker.rs"

[dependencies]
allocator-bench.path = "../allocator-bench"
anyhow.workspace = true
clap.workspace = true
cxlalloc = { path = "../cxlalloc", features = ["backend-shm"] }
cxx.workspace = true
duct.workspace = true
homedir.workspace = true
libc.workspace = true
serde.workspace = true
serde-command-line.workspace = true
serde_json.workspace = true
shm.path = "../shm"

[build-dependencies]
bindgen.workspace = true
cxx-build.workspace = true
pkg-config.workspace = true
