[package]
name = "cxlalloc-bench"
version = "0.1.0"
edition = "2021"
default-run = "cxlalloc-bench"

[[bin]]
name = "cxlalloc-bench-worker"
path = "src/bin/worker.rs"

[[bin]]
name = "cxlalloc-bench-coordinator"
path = "src/bin/coordinator.rs"

[features]
consistency-sfence = ["cxlalloc-global/arch-gpf"]
consistency-clflush = []
consistency-clflushopt = [
    "cxlalloc-global/arch-clflushopt",
    "cxlalloc-global/arch-clwb",
]

[dependencies]
allocator-bench.path = "../allocator-bench"
anyhow.workspace = true
bon.workspace = true
cartesian.workspace = true
clap.workspace = true
cxlalloc-global = { path = "../cxlalloc-global", features = ["backend-shm"] }
cxx.workspace = true
duct.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
shm.path = "../shm"
ycsb.path = "../ycsb"

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
cxx-build.workspace = true
