[package]
name = "cxlalloc-extend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxlalloc = { path = "../cxlalloc", features = ["backend-shm", "extend"] }
clap.workspace = true
env_logger.workspace = true
