[package]
name = "cxlalloc-recover"
version = "0.1.0"
edition = "2021"

[features]
cxlalloc = ["memento/cxlalloc"]

[dependencies]
clap.workspace = true
memento = { path = "../extern/memento", features = ["no_persist", "use_clwb"] }
crossbeam-channel = { path = "../extern/memento/crossbeam-persistency/crossbeam-channel" }
crossbeam-epoch = { path = "../extern/memento/crossbeam-persistency/crossbeam-epoch" }
crossbeam-utils = { path = "../extern/memento/crossbeam-persistency/crossbeam-utils" }
