[package]
name = "cxlalloc-static"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["arch-gpf", "recover"]

arch-gpf = ["cxlalloc/arch-gpf"]

backend-ivshmem = ["cxlalloc/backend-ivshmem"]
backend-shm = ["cxlalloc/backend-shm"]

recover = ["cxlalloc/recover"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxlalloc = { path = "../cxlalloc", default-features = false }
env_logger.workspace = true
libc.workspace = true
log.workspace = true
