[package]
name = "cxlalloc"
version = "0.1.0"
edition = "2021"

[features]
backend-shm = []
extend = []
stat-count = []
stat-extend = []
stat-size = ["dep:hdrhistogram"]
validate = []

[dependencies]
arrayvec.workspace = true
atomic_refcell.workspace = true
hdrhistogram = { workspace = true, optional = true }
libc.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
