[package]
name = "cxlalloc"
version = "0.1.0"
edition = "2021"

[features]
arch-gpf = []
arch-clwb = []
arch-clflushopt = []
backend-shm = []
extend = []
stat-count = []
stat-extend = []
stat-size = ["dep:hdrhistogram"]
validate = []

[dependencies]
arrayvec.workspace = true
hdrhistogram = { workspace = true, optional = true }
gcollections.workspace = true
intervallum.workspace = true
libc.workspace = true
log.workspace = true
ribbit.workspace = true

[dev-dependencies]
crash = { path = "../crash" }
env_logger.workspace = true
