[package]
name = "cxlalloc"
version = "0.1.0"
edition = "2021"

[features]
default = ["arch-gpf", "recover"]

arch-gpf = []
arch-clwb = []
arch-clflushopt = []

backend-ivshmem = []
backend-shm = []
backend = ["backend-ivshmem", "backend-shm"]

extend = []

recover = ["recover-cas", "recover-log"]
# Enable detectable CAS
recover-cas = []
# Enable state transition logging
recover-log = []

stat-count = []
stat-extend = []
stat-size = ["dep:hdrhistogram"]

validate = []

[dependencies]
arrayvec.workspace = true
hdrhistogram = { workspace = true, optional = true }
gcollections.workspace = true
intervallum.workspace = true
libc.workspace = true
log.workspace = true
ribbit.workspace = true

[dev-dependencies]
crash = { path = "../crash" }
env_logger.workspace = true
proptest.workspace = true
proptest-state-machine.workspace = true
